kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: dp-noninteractive-doc-check
  name: dp-noninteractive-doc-check
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    name: dp-noninteractive-doc-check
